--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,16 @@
 [model]
-# Local model directory after setup.sh download
 dir = "models/cardiffnlp-roberta-sentiment"
 device = "cpu"
 
 [inference]
-# Inference parameters
 max_length = 128
 batch_size = 8
-num_labels = 3
-labels = ["negative", "neutral", "positive"]
+
+[relational]
+# rows: negative, neutral, positive
+# columns: hurt, trust, hope, frustration, curiosity
+mapping = [
+  [0.9, 0.0, 0.0, 0.7, 0.0],
+  [0.3, 0.2, 0.2, 0.3, 0.1],
+  [0.0, 0.9, 0.8, 0.0, 0.6],
+]
