--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,8 @@ services:
       - ./src:/app/src
       - ./config.toml:/app/config.toml
       - ./migrations:/app/migrations
+      - ./scripts:/app/scripts
+      - ./db:/app/db
     ports:
       - "8001:8001"
     networks:
