--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "psycopg2-binary",
     "prometheus-client",
     "pytest",
+    "pytest-asyncio",
     "python-dotenv",
     "pydantic",
     "testcontainers[postgres]>=4.13.3",
@@ -21,3 +22,4 @@ build-backend = "setuptools.build_meta"
 
 [tool.pytest.ini_options]
 pythonpath = ["."]
+asyncio_mode = "auto"
