--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,20 @@
-networks:
-  promptdev-net:
-    driver: bridge
-
-volumes:
-  promptdev-pgdata:
-  promptdev-models:
-
 services:
   postgres:
-    image: postgres:16
+    image: postgres:15
     container_name: promptdev-postgres
     environment:
-      POSTGRES_USER: ${POSTGRES_USER:-promptdev_user}
-      POSTGRES_PASSWORD: ${PROMPTDEV_USER_PASS}
-      POSTGRES_DB: ${POSTGRES_DB:-promptdev_db}
-    ports:
-      - "5434:5432"
+      POSTGRES_USER: promptdev
+      POSTGRES_PASSWORD: promptdev
+      POSTGRES_DB: promptdev
     volumes:
-      - promptdev-pgdata:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
     networks:
       - promptdev-net
-    restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-promptdev_user}"]
-      interval: 10s
+      test: ["CMD-SHELL", "pg_isready -U promptdev"]
+      interval: 5s
       timeout: 5s
       retries: 5
 
@@ -37,6 +28,7 @@ services:
       MISTRAL_URL: ${MISTRAL_URL:-http://host.docker.internal:8080}
     volumes:
       - ./src:/app/src
+      - ./static:/app/static
       - ./config.toml:/app/config.toml
       - ./migrations:/app/migrations
       - ./scripts:/app/scripts
@@ -45,9 +37,13 @@ services:
       - "8001:8001"
     networks:
       - promptdev-net
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
     depends_on:
       postgres:
         condition: service_healthy
-    restart: unless-stopped
+
+networks:
+  promptdev-net:
+    driver: bridge
+
+volumes:
+  postgres_data:
