--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,3 +23,6 @@ build-backend = "setuptools.build_meta"
 
 [tool.pytest.ini_options]
 pythonpath = ["."]
+filterwarnings = [
+    "ignore::DeprecationWarning:testcontainers.*",
+]
