--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,17 @@
-# PromptDev Environment Variables
-# Copy this file to .env and fill in the values
+# Super Admin (not in database)
+SUPER_ADMIN_EMAIL=
+SUPER_ADMIN_PASSWORD=
 
-# Database password for promptdev_user
-PROMPTDEV_USER_PASS=your_secure_password_here
+# Session Security
+SESSION_SECRET_KEY=
 
-# Test database password
-PROMPTDEV_TEST_USER_PASS=your_test_password_here
+# Local PostgreSQL
+PROMPTDEV_USER_PASS=
 
-# Optional: Postgres superuser password (for advanced admin tasks)
-POSTGRES_SUPERPASS=
+# Supabase (remote PostgreSQL)
+SUPABASE_PASSWORD=
 
-# Database defaults (usually don't need to change)
-POSTGRES_USER=promptdev_user
-POSTGRES_DB=promptdev_db
+# Venice.ai LLM API
+VENICE_API_KEY=
+VENICE_API_URL=https://api.venice.ai/api/v1
+VENICE_MODEL=mistral-31-24b
