--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,15 @@
 # Super Admin (not in database)
-SUPER_ADMIN_EMAIL=
-SUPER_ADMIN_PASSWORD=
+SUPER_ADMIN_EMAIL=super@yourdomain.com
+SUPER_ADMIN_PASSWORD=change_this_super_admin_password
 
 # Session Security
-SESSION_SECRET_KEY=
+SESSION_SECRET_KEY=change_this_to_random_32_char_hex
 
 # Local PostgreSQL
-PROMPTDEV_USER_PASS=
+PROMPTDEV_USER_PASS=postgres
 
 # Supabase (remote PostgreSQL)
-SUPABASE_PASSWORD=
+SUPABASE_PASSWORD=your_supabase_password
 
 # Venice.ai LLM API
-VENICE_API_KEY=
-VENICE_API_URL=https://api.venice.ai/api/v1
-VENICE_MODEL=mistral-31-24b
+VENICE_API_KEY=your_venice_api_key
