--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,10 @@ url = "http://host.docker.internal:8080"
 [test_mistral]
 url = "http://127.0.0.1:8080"
 
+[venice]
+url = "https://api.venice.ai/api/v1"
+model = "mistral-31-24b"
+
 [database]
 host = "postgres"
 port = 5432
