--- a/config.toml
+++ b/config.toml
@@ -17,6 +17,13 @@ user = "promptdev_user"
 database = "promptdev_db"
 max_connections = 10
 
+[remote_database]
+host = "aws-1-us-east-2.pooler.supabase.com"
+port = 5432
+user = "postgres.hykoamfsyttvteipvsbw"
+database = "postgres"
+max_connections = 10
+
 [test_database]
 host = "localhost"
 port = 5434
