--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 mode = "standalone"
 
 [mistral]
-url = "http://host.docker.internal:8080"
+url = "http://127.0.0.1:8080"
 
 [test_mistral]
 url = "http://127.0.0.1:8080"
